--- a/public/assets/css/mysscrow.css
+++ b/public/assets/css/mysscrow.css
@@ -748,7 +748,7 @@ table {
   font-size: 20px;
   cursor: pointer;
   opacity: 0;
-  filter: alpha(opacity=0);
+  filter: alpha(opacity=0) 1important;
 }
 .fileUpload {
   position: relative;
@@ -1234,7 +1234,7 @@ Footer CSS
 }
 .card-stripe .card-stripe-ul .card-stripe-ul-li {
   padding: 0px;
-  box-shadow: 0 5px 20px #eee;
+  /* box-shadow: 0 5px 20px #eee; */
   border-radius: 3px;
   float: left;
   margin-right: 5px;
@@ -1243,6 +1243,8 @@ Footer CSS
   list-style-type: none;
   display: inline-block;
   float: left;
+  color: #aebac7;
+  /* background-color: #aebac7; */
 }
 
 #logout .fa-5x {
@@ -1270,9 +1272,9 @@ Footer CSS
 
 .card-stripe .add_image {
   padding: 1rem 1rem !important;
-  /*border: 1px solid #ddd;*/
-  width: 8.6rem;
-  height: 7.5rem;
+  /* border: 1px solid #ddd; */
+  width: 6.6rem;
+  height: 6.5rem;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -1286,13 +1288,12 @@ Footer CSS
   cursor: pointer;
   position: absolute;
   left: auto;
-  right: -0.3rem;
-  top: -0.4rem;
+  right: 8px;
+  top: -5px;
   border-radius: 50%;
   height: 20px;
   width: 20px;
   line-height: 1.3;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   z-index: 5;
 }
 .fileUpload .fa {
@@ -1301,7 +1302,7 @@ Footer CSS
   height: 100px;
   width: 100px;
   padding-top: 0.7rem;
-  background-color: #292b2c;
+  background-color: #aebac7;
 }
 .card-stripe-ul .fileUpload input {
   width: 100%;
@@ -1460,9 +1461,6 @@ button.btn.btn-sm.btn-secondary.password-mask {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
     0 2px 10px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background-color: #592c82 !important;
-  color: #fff;
-  border-color: #592c82;
 }
 .img-responsive {
   width: 100%;
@@ -2132,4 +2130,52 @@ height: 10rem;
 .badge.bg-light-danger {
   background-color: #FFE2E5 !important;
   color: #F64E60 !important;
+}
+/* custmer job list */
+.job-card p {
+  margin-bottom: 20px;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 20px;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  font-size: 15px;
+  color: #444;
+}
+.job-card:hover {
+    background: #e07c3c;
+    -webkit-transform: translateY(-10px);
+    transform: none;
+}
+.tag-offer {
+  position: absolute;
+  z-index: 1;
+  overflow: hidden;
+  font-size: 19px;
+  font-weight: 700;
+  text-transform: capitalize;
+  text-align: center;
+  line-height: 20px;
+  padding: 10px 16px;
+  display: block;
+  color: #fff;
+  border-radius: 3px;
+  background-color: #592c82;
+  box-shadow: 0 5px 11px 0 rgb(0 0 0 / 18%), 0 4px 15px 0 rgb(0 0 0 / 15%);
+}
+#job-info-card .tag-offer {
+  font-size: inherit !important;
+  font-weight: initial !important;
+  text-transform: capitalize !important;
+  text-align: center !important;
+  line-height: normal !important;
+  padding: 5px 9px !important;
+}
+.contractor-request-card.no-shadow:hover .text-secondary ,
+.contractor-request-card.no-shadow:hover .btn ,
+.contractor-request-card.no-shadow:hover .text-success{
+  color: #fff !important;
+  border-color: #fff;
 }
